[package]
name = "cdu"
version = "1.0.0"
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
edition = "2018"
description = "Cloudflare DNS record update"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
log = "0.4.14"
pretty_env_logger = "0.4.0"
public-ip = { version = "0.2.0", default-features = false, features = ["google", "opendns", "tokio-dns-resolver"] }
reqwest = { version = "0.11.1", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "time"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
